--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Project
 version=1.0.0
-group=com.aegide.tomecraft
+group=com.example.examplemod
 
 # Common
 minecraft_version=1.18.2
@@ -17,9 +17,9 @@ fabric_version=0.47.8+1.18.2
 fabric_loader_version=0.13.3
 
 # Mod options
-mod_name=Tomecraft
-mod_author=Aegide
-mod_id=tomecraft
+mod_name=MultiLoader
+mod_author=Jared
+mod_id=multiloader
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
