--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ pluginManagement {
     }
 }
 
-rootProject.name = 'MultiLoader'
+rootProject.name = 'Tomecraft'
 include("Common", "Fabric", "Forge")
